# ccom

./: .gitignore  .goreleaser.yml  404.html  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.bat  build.sh  compile-test-file.bat  index.html  install.bat  install.sh  lexer-schema.txt  sitemap.xml  wix.json
cli/: ccom.go  (+7 more)
compiler/: .gitignore  CMakeLists.txt  ccom.cpp
compiler/c++/src/: main.cpp
compiler/c++/src/interpreter/: interpreter.h
compiler/c++/src/parser/: parser.cpp
compiler/c++/src/parser/ast/: ComBlockBlockExprAST.cpp  CompStmtExprAST.cpp  CompStmtExprAST.h  IdentifierExprAST.h  IfBlockExprAST.h  NumberExprAST.cpp  SectionExprAST.h
compiler/cpp/: .gitignore  CMakeLists.txt  setup-libs.bat
compiler/cpp/.run/: All CTest.run.xml  CCom_run.run.xml  CCom_test.run.xml
compiler/cpp/src/: CMakeLists.txt  main.cpp  main.h
compiler/cpp/src/analyzer/: Analyzer.cpp  Analyzer.h  analyzer.cpp  analyzer.h
compiler/cpp/src/exception/: IncompatibleTypesException.cpp  IncompatibleTypesException.h  MaxLookaheadException.cpp  MaxLookaheadException.h  UnexpectedCharException.cpp  UnexpectedCharException.h  UnexpectedDataTypeException.cpp  UnexpectedDataTypeException.h  UnexpectedTokenException.cpp  UnexpectedTokenException.h  UnknownDataTypeException.cpp  UnknownDataTypeException.h
compiler/cpp/src/interpreter/: Interpreter.cpp  Interpreter.h  interpreter.cpp  interpreter.h
compiler/cpp/src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h  lexer.cpp  lexer.h
compiler/cpp/src/parser/: ASTNodes.cpp  ASTNodes.h  Parser.cpp  Parser.h  parser.cpp  parser.h
compiler/cpp/src/parser/ast/: ArbitraryExprAST.cpp  ArbitraryExprAST.h  BooleanExprAST.cpp  BooleanExprAST.h  ComBlockBlockExprAST.cpp  ComBlockBlockExprAST.h  ComBlockExprAST.cpp  ComBlockExprAST.h  ComLineBlockExprAST.cpp  ComLineBlockExprAST.h  CompStmtExprAST.cpp  CompStmtExprAST.h  ContainsStmtExprAST.cpp  ContainsStmtExprAST.h  ContentBlockExprAST.cpp  ContentBlockExprAST.h  ContentExprAST.cpp  ContentExprAST.h  ExprAST.h  HasStmtExprAST.cpp  HasStmtExprAST.h  IdentifierExprAST.cpp  IdentifierExprAST.h  IfBlockExprAST.cpp  IfBlockExprAST.h  KeyExprAST.cpp  KeyExprAST.h  NumberExprAST.cpp  NumberExprAST.h  PayloadExprAST.cpp  PayloadExprAST.h  SectionExprAST.cpp  SectionExprAST.h  StmtExprAST.cpp  StmtExprAST.h  StmtLstExprAST.cpp  StmtLstExprAST.h  StringExprAST.cpp  StringExprAST.h  TopLevelExprAST.cpp  (+3 more)
compiler/cpp/src/reader/: Reader.cpp  Reader.h  ReaderTests.cpp
compiler/cpp/src/util/: JSONParser.cpp  JSONParser.h
compiler/cpp/test/: AnalyzerTest.cpp  CMakeLists.txt  InterpreterTest.cpp  LexerTest.cpp  ParserTest.cpp  ReaderTest.cpp  main.cpp
compiler/cpp/test/analyzer/: AnalyzerTest.cpp
compiler/cpp/test/interpreter/: InterpreterTest.cpp
compiler/cpp/test/lexer/: LexerTest.cpp
compiler/cpp/test/parser/: ParserTest.cpp
compiler/cpp/test/reader/: ReaderTest.cpp
compiler/cpp/test/test-files/advanced/: advanced.cpp  advanced.html  advanced.yml
compiler/cpp/test/test-files/analyzer/conditional-section-error-boolean-int/: input-data.json
compiler/cpp/test/test-files/analyzer/conditional-section-error-boolean-string/: input-data.json  input-file.txt
compiler/cpp/test/test-files/analyzer/conditional-section-error-int-boolean/: input-data.json
compiler/cpp/test/test-files/analyzer/conditional-section-error-int-string/: input-file.txt
compiler/cpp/test/test-files/analyzer/conditional-section-error-string-boolean/: input-data.json  input-file.txt
compiler/cpp/test/test-files/analyzer/conditional-section-error-string-int/: input-data.json
compiler/cpp/test/test-files/brace-open/: brace-open.html
compiler/cpp/test/test-files/dot/: Dot.yml  dot.cpp  dot.html
compiler/cpp/test/test-files/equals/: equals.cpp  equals.py
compiler/cpp/test/test-files/false/: false.cpp
compiler/cpp/test/test-files/greater/: greater.yml
compiler/cpp/test/test-files/greater-equal/: greater-equal.html
compiler/cpp/test/test-files/greater-equals/: greater-equals.cpp
compiler/cpp/test/test-files/if/: if.py
compiler/cpp/test/test-files/index/: index.cpp  index.yml
compiler/cpp/test/test-files/less/: less.html
compiler/cpp/test/test-files/less-equal/: less-equal.cpp
compiler/cpp/test/test-files/less-equals/: less-equals.html  less-equals.py
compiler/cpp/test/test-files/not/: not.cpp  not.html
compiler/cpp/test/test-files/not-equals/: not-equals.cpp
compiler/cpp/test/test-files/number/: number.cpp  number.html  number.py
compiler/cpp/test/test-files/or/: or.html
compiler/cpp/test/test-files/true/: true.html
compiler/cpp/test/util/: FileReader.cpp  FileReader.h  LanguageDescription.cpp  LanguageDescription.h  LanguageDescriptor.cpp  LanguageDescriptor.h
compiler/java/: .gitignore  .project  pom.xml
compiler/java-compiler/: CComTestInput.txt
compiler/java-compiler/src/: CComManualMain.java  CComTest.java
compiler/java-compiler/src/compiler/: CCom.java  FileReader.java  FileReaderIntf.java  NumberReader.java
compiler/java-compiler/src/test/: TestSuite.java
compiler/java/.github/workflows/: ci.yml
compiler/src/: main.cpp  main.h
compiler/src/analyzer/: analyzer.cpp  analyzer.h
compiler/src/interpreter/: interpreter.cpp  interpreter.h
compiler/src/lexer/: Token.cpp  Token.h  lexer.cpp  lexer.h
compiler/src/parser/: parser.cpp  parser.h
compiler/src/parser/ast/: ArbitraryExprAST.cpp  ArbitraryExprAST.h  BinaryExprAST.cpp  BinaryExprAST.h  ComBlockBlockExprAST.cpp  ComBlockBlockExprAST.h  ComBlockExprAST.h  ComLineBlockExprAST.cpp  ComLineBlockExprAST.h  CompStmtExprAST.cpp  CompStmtExprAST.h  ContentExprAST.cpp  ContentExprAST.h  ExprAST.cpp  ExprAST.h  HasStmtExprAST.cpp  HasStmtExprAST.h  IdentifierExprAST.cpp  IdentifierExprAST.h  IfBlockExprAST.cpp  IfExprAST.cpp  IfExprAST.h  KeyExprAST.cpp  KeyExprAST.h  NumberExprAST.cpp  NumberExprAST.h  PayloadExprAST.cpp  PayloadExprAST.h  SectionExprAST.cpp  SectionExprAST.h  StmtExprAST.cpp  StmtExprAST.h  StmtLstExprAST.cpp  StmtLstExprAST.h  StringExprAST.cpp  StringExprAST.h  ValueExprAST.cpp  ValueExprAST.h
(+239 files in other folders)
